tests/ui/parser/bad-struct-following-where.rs
struct A where T: Sized !
//~^ ERROR expected `{` after struct name, found
